--- a/Spriggit.Core/Spriggit.Core.csproj
+++ b/Spriggit.Core/Spriggit.Core.csproj
@@ -2,6 +2,7 @@
 
     <ItemGroup>
         <PackageReference Include="Noggog.CSharpExt" />
+        <PackageReference Include="Mutagen.Bethesda.Core" />
         <PackageReference Include="Mutagen.Bethesda.Kernel" />
         <PackageReference Include="NuGet.Versioning" />
     </ItemGroup>
