--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -20,16 +20,16 @@
             <Version>[0.43.0.1-nightly-20231025-164174]</Version>
         </PackageVersion>
         <PackageVersion Include="Mutagen.Bethesda.Serialization">
-            <Version>[1.3]</Version>
+            <Version>[1.3.0.1-zdev]</Version>
         </PackageVersion>
         <PackageVersion Include="Mutagen.Bethesda.Serialization.Newtonsoft">
-            <Version>[1.3]</Version>
+            <Version>[1.3.0.1-zdev]</Version>
         </PackageVersion>
         <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator">
-            <Version>[1.3]</Version>
+            <Version>[1.3.0.1-zdev]</Version>
         </PackageVersion>
         <PackageVersion Include="Mutagen.Bethesda.Serialization.Yaml">
-            <Version>[1.3]</Version>
+            <Version>[1.3.0.1-zdev]</Version>
         </PackageVersion>
         <PackageVersion Include="Mutagen.Bethesda.Skyrim">
             <Version>[0.43.0.1-nightly-20231025-164174]</Version>
