--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,7 @@ charset = utf-8
 end_of_line = crlf
 
 [*.cs]
+csharp_style_namespace_declarations = file_scoped:warning
 
 # CS4014: Task not awaited
 dotnet_diagnostic.CS4014.severity = error
