--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -119,14 +119,9 @@ jobs:
         dotnet restore Spriggit.sln
     - name: Build
       run: dotnet build Spriggit.sln -c Release --no-restore /p:GeneratePackageOnBuild=false
-    - name: Pack Preview
-      if: ${{ success() && (github.event.release.prerelease || github.event_name != 'release') }}
+    - name: Pack
       run: |
-        dotnet pack Spriggit.sln -c Release -o out --include-symbols
-    - name: Pack Release
-      if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
-      run: | 
-        dotnet pack Spriggit.sln -c Release -o out --include-symbols
+        dotnet pack Spriggit.sln -c Release --no-build --no-restore -o out --include-symbols -p:SymbolPackageFormat=snupkg
     - name: Pack GUI
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: dotnet publish "Spriggit.UI/Spriggit.UI.csproj" --configuration Release -p:PublishSingleFile=true 
