--- a/Spriggit.Engine/Spriggit.Engine.csproj
+++ b/Spriggit.Engine/Spriggit.Engine.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\Spriggit.Core\Spriggit.Core.csproj"/>
